# prism

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
cli/: go.mod  main.go
cli/cmd/: root.go  status.go
cli/internal/client/: client.go
core/: .golangci.yml  Dockerfile  Makefile  config.yaml  go.mod  go.sum  test_suite.sh
core/cmd/prism-core/: main.go
core/cmd/server/: main.go
core/config/: config.yaml
core/internal/api/: middleware.go  router.go  server.go
core/internal/config/: config.go
core/internal/core/: proxy.go
core/internal/service/: node.go  node_test.go  nodepool.go  scheduler.go  stats.go  stats_test.go  subscription.go  subscription_test.go  types.go
core/internal/storage/: database.go  database_test.go  models.go
core/internal/testutil/: database.go  mock.go
core/pkg/logger/: logger.go
core/scripts/: test.sh
desktop/: README.md  index.html  package.json  vite.config.ts
desktop/src/: App.css  App.tsx  index.css  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
desktop/src/components/: CountryFlag.tsx  Sidebar.tsx  StatusBadge.tsx
desktop/src/pages/: Dashboard.tsx  Nodes.tsx  Settings.tsx  Subscriptions.tsx
desktop/src/store/: index.ts  (+1 more)
docs/: ARCHITECTURE.md  DATABASE_DESIGN.md  DATABASE_MIGRATIONS.md  GOFIBER_GUIDE.md  ROADMAP.md  WEB_DEVELOPMENT_PLAN.md  api-specification.md  architecture.md  database-design.md  deployment-guide.md  development-guide.md
(+10 files in other folders)
