[package]
name = "prism-desktop"
version = "1.0.0"
description = "Prism 代理管理工具"
authors = ["Prism Team"]
license = "MIT"
repository = "https://github.com/ice-cream-heaven/prism"
default-run = "prism-desktop"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = [ "api-all", "updater", "system-tray", "window-all"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
dirs = "5.0"
log = "0.4"
env_logger = "0.10"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]